--- a/Pipfile
+++ b/Pipfile
@@ -14,34 +14,29 @@ certifi = "==2019.9.11"
 chardet = "==3.0.4"
 chromedriver = ">=2.24.1"
 decorator = "==4.4.1"
-enum34 = "==1.1.6"
-idna = "==2.8"
-importlib-metadata = "==0.23"
-isort = "==4.3.21"
-lazy-object-proxy = "==1.4.3"
-lxml = "==4.4.1"
-mccabe = ">=0.6.1"
+enum34 = ">=1.1.6"
+idna = ">=2.8"
+importlib-metadata = ">=0.23"
+lazy-object-proxy = ">=1.4.3"
+lxml = ">=4.4.1"
 more-itertools = "==7.2.0"
 namedlist = "==1.7"
-pipenv = "==2018.11.26"
-pluggy = "==0.13.0"
-public = "==2019.4.13"
-py = "==1.8.0"
-pylint = "==2.4.3"
-pyparsing = "==2.4.5"
-requests = "==2.22.0"
-self = "==2019.4.13"
-typed-ast = "==1.4.0"
-urllib3 = ">=1.25.7"
-virtualenv = "==16.7.7"
-virtualenv-clone = "==0.5.3"
-wcwidth = "==0.1.7"
+pipenv = ">=2018.11.26"
+pluggy = ">=0.13.0"
+public = ">=2019.4.13"
+py = ">=1.8.0"
+pylint = ">=2.4.3"
+pyparsing = ">=2.4.5"
+self = ">=2019.4.13"
+typed-ast = ">=1.4.0"
+virtualenv = ">=16.7.7"
+virtualenv-clone = ">=0.5.3"
+wcwidth = ">=0.1.7"
 wrapt = "==1.11.2"
 zipp = ">=0.6.0"
 six = "*"
 pytest = "*"
 pytest-html = "*"
-upgrade = "*"
 
 [requires]
-python_version = "3.6"
+python_version = "3.7"
