--- a/Pipfile
+++ b/Pipfile
@@ -6,37 +6,59 @@ verify_ssl = true
 [dev-packages]
 
 [packages]
-selenium = "*"
-astroid = ">=2.3.2"
+selenium = "==3.141.0"
+astroid = "==2.4.1"
 atomicwrites = "==1.3.0"
 attrs = "==19.3.0"
-certifi = "==2019.9.11"
+certifi = "==2019.11.28"
 chardet = "==3.0.4"
-chromedriver = ">=2.24.1"
+chromedriver = "==2.24.1"
 decorator = "==4.4.1"
-enum34 = ">=1.1.6"
-idna = ">=2.8"
-importlib-metadata = ">=0.23"
-lazy-object-proxy = ">=1.4.3"
-lxml = ">=4.4.1"
-more-itertools = "==7.2.0"
+enum34 = "==1.1.10"
+idna = "==2.8"
+importlib-metadata = "==1.6.0"
+lazy-object-proxy = "==1.4.3"
+lxml = "==4.5.0"
+more-itertools = "==8.3.0"
 namedlist = "==1.7"
-pipenv = ">=2018.11.26"
-pluggy = ">=0.13.0"
-public = ">=2019.4.13"
-py = ">=1.8.0"
-pylint = ">=2.4.3"
-pyparsing = ">=2.4.5"
-self = ">=2019.4.13"
-typed-ast = ">=1.4.0"
-virtualenv = ">=16.7.7"
-virtualenv-clone = ">=0.5.3"
-wcwidth = ">=0.1.7"
+pipenv = "==2018.11.26"
+pluggy = "==0.13.1"
+public = "==2019.4.13"
+py = "==1.8.1"
+pylint = "==2.5.2"
+pyparsing = "==2.4.6"
+self = "==2019.4.13"
+typed-ast = "==1.4.1"
+virtualenv = "==20.0.20"
+virtualenv-clone = "==0.5.4"
+wcwidth = "==0.1.9"
 wrapt = "==1.11.2"
-zipp = ">=0.6.0"
-six = "*"
-pytest = "*"
-pytest-html = "*"
+zipp = "==3.1.0"
+six = "==1.14.0"
+pytest = "==5.4.2"
+pytest-html = "==2.1.1"
+appdirs = "==1.4.3"
+colorama = "==0.4.3"
+contextlib2 = "==0.6.0"
+distlib = "==0.3.0"
+distro = "==1.4.0"
+filelock = "==3.0.12"
+html5lib = "==1.0.1"
+ipaddr = "==2.2.0"
+isort = "==4.3.21"
+lockfile = "==0.12.2"
+mccabe = "==0.6.1"
+msgpack = "==0.6.2"
+pep517 = "==0.8.2"
+progress = "==1.5"
+pytest-metadata = "==1.9.0"
+pytoml = "==0.1.21"
+requests = "==2.22.0"
+retrying = "==1.3.3"
+toml = "==0.10.0"
+urllib3 = "==1.25.8"
+webencodings = "==0.5.1"
+CacheControl = "==0.12.6"
 
 [requires]
 python_version = "3.7"
