--- a/Pipfile
+++ b/Pipfile
@@ -59,6 +59,7 @@ toml = "==0.10.0"
 urllib3 = "==1.25.8"
 webencodings = "==0.5.1"
 CacheControl = "==0.12.6"
+allure-pytest = "*"
 
 [requires]
 python_version = "3.7"
